@@ -2,6 +2,8 @@ Nutch Change Log
 
 Release 2.2 - Current Development
 
+* NUTCH-1513 Support Robots.txt for Ftp urls (tejasp)
+
 * NUTCH-1053 Parsing of RSS feeds fails (tejasp)
 
 * NUTCH-1563 FetchSchedule#getFields is never used by GeneratorJob (Feng)
